--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
+    <button id="startButton" class="game-button">スタート</button>
+    <button id="retryButton" class="game-button">リトライ</button>
     <script src="src/script.js"></script>
 </body>
 </html>
